# enum-update

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
enum-update/: Cargo.toml
enum-update-derive/: Cargo.toml
enum-update-derive/src/: construction.rs  lib.rs  parse.rs
enum-update/src/: lib.rs
enum-update/tests/: basic.rs  multithreaded.rs
