[package]
name = "enum-update-derive"
version = "0.2.0"
edition = "2021"
description = "Derive macros for representing state changes as enums"
license = "MIT"
repository = "https://github.com/Eisverygoodletter/enum-update"
keywords = ["enum", "macros", "proc-macros", "state"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.7.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["parsing", "extra-traits", "full"] }
