[package]
name = "enum-update"
version = "0.2.0"
edition = "2021"
description = "A library for representing state changes as enums"
license = "MIT"
repository = "https://github.com/Eisverygoodletter/enum-update"
keywords = ["enum", "macros", "proc-macros", "state"]
readme = "../README.md"

[dependencies]
enum-update-derive = { version = "0.2.0", path = "../enum-update-derive" }